Fix: Dark mode toggle issue

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -15,10 +15,11 @@
   --font-gotu: "Gotu", sans-serif;
 }
 
-.light {
+html:not(.dark) {
   color-scheme: light;
 }
-.dark {
+
+html.dark {
   color-scheme: dark;
 }
 
